force-app/main/default/objects/Order/fields/Agreement_Value_GST_INC__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_GST_INC__c</fullName>
    <label>Agreement Value(GST INC.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>