force-app/main/default/objects/Order/fields/Appt__c.field-meta.xml
<CustomField>
    <fullName>Appt__c</fullName>
    <label>Appt #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>