force-app/main/default/objects/Order/fields/ATS_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>ATS_Return_Date__c</fullName>
    <label>ATS Return Date</label>
    <type>Date</type>
</CustomField>