force-app/main/default/objects/Order/fields/ATS_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>ATS_Status_Code__c</fullName>
    <label>ATS Status (Code)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>