force-app/main/default/objects/Order/fields/Challan_Number__c.field-meta.xml
<CustomField>
    <fullName>Challan_Number__c</fullName>
    <label>Challan Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>