force-app/main/default/objects/Order/fields/Channel_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>