force-app/main/default/objects/Order/fields/GST_Invoice__c.field-meta.xml
<CustomField>
    <fullName>GST_Invoice__c</fullName>
    <label>GST Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>