force-app/main/default/objects/Order/fields/Index_II__c.field-meta.xml
<CustomField>
    <fullName>Index_II__c</fullName>
    <label>Index II</label>
    <length>255</length>
    <type>Text</type>
</CustomField>