force-app/main/default/objects/Order/fields/IsStampDuty_Done__c.field-meta.xml
<CustomField>
    <fullName>IsStampDuty_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsStampDuty Done</label>
    <type>Checkbox</type>
</CustomField>