force-app/main/default/objects/Order/fields/IsWelcome_Call_Done__c.field-meta.xml
<CustomField>
    <fullName>IsWelcome_Call_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsWelcome Call Done</label>
    <type>Checkbox</type>
</CustomField>