force-app/main/default/objects/Order/fields/Material_Code__c.field-meta.xml
<CustomField>
    <fullName>Material_Code__c</fullName>
    <formula>Product__r.Material_Code__c</formula>
    <label>Material Code</label>
    <type>Text</type>
</CustomField>