force-app/main/default/objects/Order/fields/NOC_DATE__c.field-meta.xml
<CustomField>
    <fullName>NOC_DATE__c</fullName>
    <label>NOC DATE</label>
    <type>Date</type>
</CustomField>