force-app/main/default/objects/Order/fields/Old_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Old_Order_No__c</fullName>
    <label>Old Order No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>