force-app/main/default/objects/Order/fields/Parking1__c.field-meta.xml
<CustomField>
    <fullName>Parking1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parking1</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Orders (Parking1)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>