force-app/main/default/objects/Order/fields/Parking2__c.field-meta.xml
<CustomField>
    <fullName>Parking2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parking2</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Orders (Parking2)</relationshipLabel>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>