force-app/main/default/objects/Order/fields/Parking3__c.field-meta.xml
<CustomField>
    <fullName>Parking3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parking3</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Orders (Parking3)</relationshipLabel>
    <relationshipName>Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>