force-app/main/default/objects/Order/fields/Payment_Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Code__c</fullName>
    <label>Payment Plan Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>