force-app/main/default/objects/Order/fields/Price_Ladder__c.field-meta.xml
<CustomField>
    <fullName>Price_Ladder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Ladder</label>
    <referenceTo>Price_Ladder__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>