force-app/main/default/objects/Order/fields/Receipt_no__c.field-meta.xml
<CustomField>
    <fullName>Receipt_no__c</fullName>
    <label>Receipt no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>