force-app/main/default/objects/Order/fields/Recieved_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Recieved_Percentage__c</fullName>
    <label>Recieved Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>