force-app/main/default/objects/Order/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <label>Registration #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>