force-app/main/default/objects/Order/fields/Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager__c</fullName>
    <label>Relationship Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>