force-app/main/default/objects/Order/fields/Sanction_Letter_date__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Letter_date__c</fullName>
    <label>Sanction Letter date</label>
    <type>Date</type>
</CustomField>