force-app/main/default/objects/Order/fields/SAP_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Account_Code__c</fullName>
    <label>SAP Account Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>