force-app/main/default/objects/Order/fields/SAP_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Contract_Number__c</fullName>
    <externalId>true</externalId>
    <label>SAP Contract Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>