force-app/main/default/objects/Order/fields/TDS_Invoice__c.field-meta.xml
<CustomField>
    <fullName>TDS_Invoice__c</fullName>
    <label>TDS Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>