force-app/main/default/objects/Order/fields/TDS_Received__c.field-meta.xml
<CustomField>
    <fullName>TDS_Received__c</fullName>
    <label>TDS Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>